--- a/Fiap07.Web.MVC/Fiap07.WEB.MVC/Views/Shared/_Layout.cshtml
+++ b/Fiap07.Web.MVC/Fiap07.WEB.MVC/Views/Shared/_Layout.cshtml
@@ -17,21 +17,21 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("FIAP", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Brasfoot", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categoria <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Time <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Cadastro","Cadastrar","Categoria")</li>
+                            <li>@Html.ActionLink("Cadastrar", "Cadastrar", "Time")</li>
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Imóvel <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Jogadores <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Cadastro","Cadastrar","Imovel")</li>
-                            <li>@Html.ActionLink("Lista","Listar","Imovel")</li>
+                            <li>@Html.ActionLink("Cadastrar", "Cadastrar", "Jogador")</li>
+                            <li>@Html.ActionLink("Lista de Jogadores", "Listar", "Jogador")</li>
                         </ul>
                     </li>
                 </ul>
